[package]
name = "vortex"
description = "Vortex is a Rust WebRTC server using mediasoup, acting as a beta audio/voice relay for Revolt"
version = "0.3.0-alpha.2"
authors = ["Martin Loffler <me@fatalerrorcoded.eu>" "ToxicJ <TNFModding@gmail.com>"]
edition = "2022"

repository = "https://gitlab.insrt.uk/revolt/vortex"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Environment, logging
thiserror = "1.0.28"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"

# Miscellaneous
rand = "0.8.3"
base64 = "0.13.0"
once_cell = "1.8.0"
h264-profile-level-id = "0.1.1"
hash_hasher = "2.0.3"
nohash-hasher = "0.2.0"
serde_repr = "0.1.7"

# Futures, HTTP
futures = "0.3.14"
tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"

# Serialization, errors
serde_json = "1.0.67"
strum = { version = "0.23", features = ["derive"] }

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.2"

[dev-dependencies]
actix = "0.13.0"
actix-web-actors = "4.1.0"
criterion = "0.3.5"

[dev-dependencies.actix-web]
default-features = false
features = ["macros"]
version = "4.0.1"

[[bench]]
name = "direct_data"
harness = false

# RTC
mediasoup = "0.9.3"
